networkpolicy/demo/frontend/base/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /app
      backendRefs:
        - name: frontend
          port: 80
